gccida/c0/pushlevel
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushlevel/src/c-decl.c:1397:49: error: use of undeclared identifier 'binding_level'; did you mean 'indent_level'?
memcpy( newlevel, &clear_binding_level, sizeof( binding_level)); 
                                                ^~~~~~~~~~~~~
                                                indent_level
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushlevel/src/c-lex.h:30:12: note: 'indent_level' declared here
extern int indent_level;
           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushlevel/src/obj/c-decl.o] Error 1
